--- a/vaccine.css
+++ b/vaccine.css
@@ -198,7 +198,7 @@ h2 {
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 40px; /* ✅ Tambahan ini */
+  margin-bottom: 40px;
 }
 
 
@@ -262,12 +262,6 @@ h2 {
   font-weight: 400;
 }
 
-
-/* Styling Footer */
-.footer {
-	background-color: #16A4E0;
-}
-
 .row{
 	display: flex;
 	flex-wrap: wrap;
@@ -276,10 +270,11 @@ h2 {
 ul{
 	list-style: none;
 }
+
 .container{
     padding: 30px 0px;
-
 }
+
 .col{
    padding: 0 15px;
 }
@@ -324,6 +319,7 @@ ul{
 .col ul li:not(:last-child){
 	margin-bottom: 10px;
 }
+
 .col ul li a{
 	font-size: 16px;
 	color: #ffffff;
@@ -335,6 +331,7 @@ ul{
 	color: #ffffff;
 	padding-left: 8px;
 }
+
 .col .social-links a{
 	display: inline-block;
 	height: 40px;
@@ -347,6 +344,7 @@ ul{
 	color: #ffffff;
 	transition: all 0.5s ease;
 }
+
 .col .social-links a:hover{
 	color: #24262b;
 	background-color: #ffffff;
@@ -355,6 +353,7 @@ ul{
 .col-6 ul li:not(:last-child){
 	margin-bottom: 10px;
 }
+
 .col-6 ul li a{
 	font-size: 16px;
 	color: #ffffff;
